--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
     </head>
     <body>
         <h1>Tallis marques gomes fagundes</h1>
-        <p>Curriculo e gostos e pessoais</p>
-        <h2>teste</h2>
+        <div class="XP">
+            <h3>Conhecimentos</h3>
+            <p>Conhecimentos em java, C, WEB básico</p>
+        </div>
+        <div>
+            <h3>Gostos Pessoais</h3>
+            <p>Amante de culinário de todos os tipos, aspirante a jogador nos tempos vagos e ouvinte de música eletrônica.</p>
+        </div>
+        <footer>
+            <p>Contato: tallismgf@hotmail.com</p>
+            <p>Autor: Tallis Marques Gomes Fagundes</p>
+        </footer>
     </body>
 </html>
