--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <h3>Conhecimentos</h3>
             <p>Conhecimentos em java, C, WEB básico</p>
         </div>
-        <div>
+        <div class="Curte">
             <h3>Gostos Pessoais</h3>
             <p>Amante de culinário de todos os tipos, aspirante a jogador nos tempos vagos e ouvinte de música eletrônica.</p>
         </div>
